fix: layout issues

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <table align="center" border="0" bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse; border: 1px solid #cccccc;">
           <tr>
             <td align="center" bgcolor="#f8f9fa" style="height: 76px; margin-bottom: 12px;">
-              <img src="images/playplus.png" alt="Playplus" width="202" height="66" style="display: block;" />
+              <img src="https://bulnes.github.io/playplus-emails-mkt/images/playplus.png" alt="Playplus" width="202" height="66" style="display: block;" />
             </td>
           </tr>
           <tr>
             <td align="center" bgcolor="#772f7b" style="padding: 16px 0px 16px 0px;">
-              <img src="images/info.png" alt="Comunicado Importante" width="40" height="40"
+              <img src="https://bulnes.github.io/playplus-emails-mkt/images/info.png" alt="Comunicado Importante" width="40" height="40"
                 style="display: block; margin-bottom: 16px;" />
               <h1
                 style="font-size: 20px; font-weight: 300; font-family: Roboto,Arial, sans-serif; text-transform: uppercase; color: #ffffff; margin: 0px;">
@@ -69,7 +69,7 @@
           </tr>
           <tr>
             <td align="center" style="margin: 32px 0 18px;">
-              <img src="images/novidade.png" alt="Novidade Playplus" width="600" height="385" style="display: block;" />
+              <img src="https://bulnes.github.io/playplus-emails-mkt/images/novidade.png" alt="Novidade Playplus" width="600" height="385" style="display: block;" />
             </td>
           </tr>
           <tr>
@@ -116,29 +116,29 @@
               <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                 <tr>
                   <td align="center">
-                    <img src="images/alugue.png" alt="Alugue filmes quando quiser" width="154" height="125"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/alugue.png" alt="Alugue filmes quando quiser" width="154" height="125"
                       style="display: block;" />
                   </td>
                   <td align="center">
-                    <img src="images/aovivo.png" alt="Transmissões ao vivo" width="132" height="121"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/aovivo.png" alt="Transmissões ao vivo" width="132" height="121"
                       style="display: block;" />
                   </td>
                   <td align="center">
-                    <img src="images/cancele.png" alt="Sem compromisso. Cancele a qualquer momento" width="156"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/cancele.png" alt="Sem compromisso. Cancele a qualquer momento" width="156"
                       height="127" style="display: block;" />
                   </td>
                 </tr>
                 <tr>
                   <td align="center">
-                    <img src="images/app.png" alt="Aplicativo exclusivo para você ver tudo pelo celular ou tablet"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/app.png" alt="Aplicativo exclusivo para você ver tudo pelo celular ou tablet"
                       width="160" height="148" style="display: block;" />
                   </td>
                   <td align="center">
-                    <img src="images/assista.png" alt="Assista em qualquer computador" width="124" height="148"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/assista.png" alt="Assista em qualquer computador" width="124" height="148"
                       style="display: block;" />
                   </td>
                   <td align="center">
-                    <img src="images/radios.png" alt="Os melhores podcasts e rádios" width="131" height="130"
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/radios.png" alt="Os melhores podcasts e rádios" width="131" height="130"
                       style="display: block;" />
                   </td>
                 </tr>
@@ -155,9 +155,9 @@
               <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                 <tr>
                   <td align="left">
-                    <img src="images/footer.png" alt="PlayPlus" width="100" height="32" style="margin: 0 24px 0 0;" />
-                    <img src="images/facebook.png" alt="Facebook" width="32" height="32" style="margin: 0 8px 0 0;" />
-                    <img src="images/twitter.png" alt="Twitter" width="32" height="32" style="margin: 0 90px 0 0;" />
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/footer.png" alt="PlayPlus" width="100" height="32" style="margin: 0 24px 0 0;" />
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/facebook.png" alt="Facebook" width="32" height="32" style="margin: 0 8px 0 0;" />
+                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/twitter.png" alt="Twitter" width="32" height="32" style="margin: 0 90px 0 0;" />
                   </td>
                   <td align="left">
                     <p
