--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 style="display: block; margin-bottom: 16px;" />
               <h1
                 style="font-size: 20px; font-weight: 300; font-family: Roboto,Arial, sans-serif; text-transform: uppercase; color: #ffffff; margin: 0px;">
-                Comunidade Importante
+                Comunicado Importante
               </h1>
             </td>
           </tr>
@@ -155,14 +155,22 @@
               <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                 <tr>
                   <td align="left">
-                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/footer.png" alt="PlayPlus" width="100" height="32" style="margin: 0 24px 0 0;" />
-                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/facebook.png" alt="Facebook" width="32" height="32" style="margin: 0 8px 0 0;" />
-                    <img src="https://bulnes.github.io/playplus-emails-mkt/images/twitter.png" alt="Twitter" width="32" height="32" style="margin: 0 90px 0 0;" />
+                    <a href="https://www.playplus.com/" title="Acesse o PlayPlus" style="border: 0; text-decoration: none;">
+                      <img src="https://bulnes.github.io/playplus-emails-mkt/images/footer.png" alt="PlayPlus" width="100" height="32" style="margin: 0 24px 0 0;" />
+                    </a>
+
+                    <a href="https://facebook.com/sigaplayplus" title="Acesse o Facebook" style="border: 0; text-decoration: none;">
+                      <img src="https://bulnes.github.io/playplus-emails-mkt/images/facebook.png" alt="Facebook" width="32" height="32" style="margin: 0 8px 0 0;" />
+                    </a>
+
+                    <a href="https://twitter.com/sigaplayplus" title="Acesse o Twitter" style="border: 0; text-decoration: none;">
+                      <img src="https://bulnes.github.io/playplus-emails-mkt/images/twitter.png" alt="Twitter" width="32" height="32" style="margin: 0 90px 0 0;" />
+                    </a>
                   </td>
                   <td align="left">
                     <p
                       style="font-family: Arial; font-size: 12px; font-weight: normal; line-height: normal; color: #a1a1a1;">
-                      R7 DIVERSÃO Todos os direitos reservados <br /> 2021 Rádio e Televisão Record S.A.
+                      <strong>R7 DIVERSÃO</strong> Todos os direitos reservados <br /> 2021 Rádio e Televisão Record S.A.
                     </p>
                   </td>
                 </tr>
@@ -181,25 +189,29 @@
                   <td align="left">
                     <p
                       style="font-family: Arial; font-size: 12px; font-weight: normal; line-height: normal; color: #a1a1a1;">
-                      Termos e Condições de Uso
+                      <a href="https://www.playplus.com/help/termosdeuso" title="Termos e Condições de Uso" style="color: #a1a1a1; text-decoration: none;">
+                        Termos e Condições de Uso
+                      </a>
                     </p>
                   </td>
                   <td align="center">
                     <p
                       style="font-family: Arial; font-size: 12px; font-weight: normal; line-height: normal; color: #a1a1a1;">
-                      Privacidade
+                      <a href="https://www.playplus.com/help/politica" title="Privacidade" style="color: #a1a1a1; text-decoration: none;">Privacidade</a>
                     </p>
                   </td>
                   <td align="center">
                     <p
                       style="font-family: Arial; font-size: 12px; font-weight: normal; line-height: normal; color: #a1a1a1;">
-                      Telefone 0800 759 3789
+                      <a href="tel:+08007593789" title="Ligar para 0800 759 3789" style="color: #a1a1a1; text-decoration: none;">
+                        Telefone 0800 759 3789
+                      </a>
                     </p>
                   </td>
                   <td align="left">
                     <p
                       style="font-family: Arial; font-size: 12px; font-weight: normal; line-height: normal; color: #a1a1a1;">
-                      suporte@playplus.tv
+                      <a href="mailto:suporte@playplus.tv" title="Enviar e-mail para: suporte@playplus.tv" style="color: #a1a1a1; text-decoration: none;">suporte@playplus.tv</a>
                     </p>
                   </td>
                 </tr>
